# common-lit-kaggle

./: .gitignore  README.md  check.sh  main.py  pyproject.toml  register_submission_score.py  requirements.txt
common_lit_kaggle/features/: __init__.py  basic_count_features.py
common_lit_kaggle/framework/: pipeline.py  schema.py  table.py  table_io.py
common_lit_kaggle/modeling/: __init__.py  bart.py  bart_stack.py  bart_twins.py  base_regression.py  deberta.py  deberta_twins.py  falcon.py  pegasus_x.py  training.py
common_lit_kaggle/pipelines/: __init__.py  pipeline_basic_linear_regressor.py  pipeline_basic_random_forest.py  pipeline_explore_data.py  pipeline_predict_basic_random_forest.py  pipeline_predict_set_random_forest.py  pipeline_set_linear_regression.py  pipeline_set_random_forest.py  pipeline_split_train_test.py  pipeline_test_bart_checkpoints.py  pipeline_test_bart_model_full_data.py  pipeline_train_bart_regression.py  pipeline_zero_shot.py
common_lit_kaggle/schemas/: __init__.py  schema_augmented_train_split.py  schema_input_prompts.py  schema_input_summary.py  schema_output_prediction.py  schema_students_per_text.py  schema_synthetic_data.py  schema_texts_per_prompt.py  schema_train_test_split.py  schema_unified_text_data.py
common_lit_kaggle/settings/: config.py
common_lit_kaggle/tables/: __init__.py  table_brickets_test.py  table_eval_split.py  table_prediction_input_prompts.py  table_prediction_input_summaries.py  table_prediction_output.py  table_prompts.py  table_students_per_text.py  table_summaries.py  table_test_split.py  table_texts_per_prompt.py  table_train_bert_augmented.py  table_train_gpt2_augmented.py  table_train_llama_augmented.py  table_train_ppdb_augmented.py  table_train_rl_gpt2_synthetic.py  table_train_split.py  table_train_t5_augmented.py  table_train_wmt19_augmented.py  table_train_word2vec_augmented.py  table_unified_text_data.py
common_lit_kaggle/tasks/: __init__.py  task_add_basic_features_prediction.py  task_add_basic_features_test.py  task_add_basic_features_train.py  task_add_sentence_embedding.py  task_add_zero_shot_label.py  task_analyse_predictions.py  task_create_unified_text_data.py  task_explore_input_data.py  task_explore_unified_data.py  task_join_input_data.py  task_linear_regressor.py  task_predict_bart.py  task_predict_random_forest_classifiers.py  task_prepare_tensor_data.py  task_read_input_data.py  task_read_prediction_input_data.py  (+10 more)
git-hooks/: pre-commit.sh  pre-push.sh
src/: main.py
(+161 files in other folders)
