[tool.poetry]
name = "common-lit-kaggle"
version = "0.1.0"
description = ""
authors = ["Paolo Rechia <paolorechia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.7.0"
pylint = "^2.17.4"
mypy = "^1.4.1"
polars = "^0.18.8"
isort = "^5.12.0"
mlflow = "^2.5.0"
scikit-learn = "^1.3.0"
numpy = "^1.25.1"
pydantic = "^2.0.3"
frozendict = "^2.3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = [
    "missing-module-docstring",
    "unused-import",
    "missing-function-docstring",
    "too-few-public-methods",
    "missing-class-docstring",
]