[tool.poetry]
name = "common-lit-kaggle"
version = "0.1.0"
description = ""
authors = ["Paolo Rechia <paolorechia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.18.8"
scikit-learn = "^1.3.0"
numpy = "^1.25.1"
matplotlib = "^3.7.2"

[tool.poetry.dev-dependencies]
kaggle = "^1.5.16"
black = "^23.7.0"
mypy = "^1.4.1"
pylint = "^2.17.4"
isort = "^5.12.0"
mlflow = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = [
    "missing-module-docstring",
    "unused-import",
    "missing-function-docstring",
    "too-few-public-methods",
    "missing-class-docstring",
    "duplicate-code",
]

[tool.mypy]
ignore_missing_imports = "True"