[tool.poetry]
name = "common-lit-kaggle"
version = "0.1.0"
description = ""
authors = ["Paolo Rechia <paolorechia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
kaggle = "^1.5.16"
black = "^23.7.0"
mypy = "^1.4.1"
pylint = "^2.17.4"
isort = "^5.12.0"
mlflow = "^2.5.0"
matplotlib = "^3.7.2"
polars = "^0.18.8"
scikit-learn = "^1.3.0"
numpy = "^1.25.1"
huggingface-hub = "^0.16.4"
guidance = "^0.0.64"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = [
    "fixme",
    "missing-module-docstring",
    "unused-import",
    "missing-function-docstring",
    "too-few-public-methods",
    "missing-class-docstring",
    "duplicate-code",
    "too-many-instance-attributes",
    "line-too-long",
    "not-callable",
    "unused-variable",
    "too-many-arguments",
    "too-many-locals",
]

[tool.mypy]
ignore_missing_imports = "True"